12c_create_load_balancer.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: load-generator
  namespace: default
  labels:
    app: busybox
spec:
  replicas: 2
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
        - name: busybox
          command: ["/bin/sh"]
          imagePullPolicy: Always
          args: ["-c", "while true; do wget -q -O- http://php-app.default.svc.cluster.local; done"]
          image: lukaszbielinski/ubuntu
